# Relifo_Steallr

./: .gitignore  README.md
backend/: package.json  server.js
backend/config/: mongodb.js
backend/routes/: admin.js  applications.js  beneficiaries.js  beneficiary.js  campaigns.js  donations.js  merchant.js  merchants.js  ngo.js  transactions.js
backend/scripts/: setup-database.js
backend/utils/: fileUpload.js
contracts/: Cargo.toml  deploy.sh
contracts/.cargo/: config.toml
contracts/.soroban/identity/: admin.toml
contracts/deployed/: CONTRACT_ADDRESSES.txt  contracts.env
contracts/src/: beneficiary.rs  error.rs  event.rs  lib.rs  merchant.rs  ngo.rs  token.rs  vault.rs
docs/: COMPLETION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FINAL_TESTING_CHECKLIST.md  FIREBASE_SCHEMA.md  FREIGHTER_WALLET_INTEGRATION.md  GITHUB_UPLOAD_SUMMARY.md  GRIDFS_UPLOAD_GUIDE.md  HACKATHON_DEMO.md  IMPLEMENTATION_NOTES.md  INDEX.md  INTEGRATION_TESTS.md  MANUAL_TESTING_GUIDE.md  MOCK_DATA_REMOVAL_COMPLETE.md  MONGODB_SCHEMA.md  PHASE0_COMPLETE.md  PHASE0_QUICKSTART.md  PHASE5_COMPLETION.md  PHASE7_COMPLETION_SUMMARY.md  PROJECT_FLOW.md  QUICKSTART.md  README.md  REAL_TIME_INTEGRATION.md  SECURITY_REVIEW.md  START_HERE.md  STEPS.md  SUMMARY.md  UNFUNDED_ACCOUNT_FIX.md  UPDATES_SUMMARY.md
frontend/: next.config.ts  package.json  postcss.config.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  Layout.tsx  Navbar.tsx  RoleGuard.tsx  Sidebar.tsx  WalletConnect.tsx
frontend/src/hooks/: useContract.ts  useWallet.ts
(+45 files in other folders)
